--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "webtech",
+  "name": "jsonserver",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "faker": "^4.1.0",
+    "json-server": "^0.16.1",
+    "lodash": "^3.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "underscore": "^1.10.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "mock:api": "json-server --watch src/data/fakeCatch.json --port 4000"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +36,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "databaseGen.js",
+  "devDependencies": {
+    "semantic-ui-react": "^0.88.2"
+  },
+  "author": "",
+  "license": "ISC"
 }
