--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "faker": "^4.1.0",
     "json-server": "^0.16.1",
-    "lodash": "^3.10.0",
+    "lodash": "^4.17.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -19,8 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "mock:api": "json-server --watch src/data/fakeCatch.json --port 4000"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
